2001-05-02  Michael Meeks  <michael@ximian.com>

	* libgnome-init.c (libbonobo_class_init): kill BonoboObjectClietn.
	(gnome_program_get_config_database): split out (get_db): into here
	never cut and paste code.
	(gnome_program_get_config_database),
	(gnome_program_get_desktop_config_database): upd.
	re-order to remove redundant prototypes.

2001-05-01  Michael Meeks  <michael@ximian.com>

	* Makefile.am: fixup corba dependencies more genericaly, add
	cleanfiles.

2001-05-02  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Added explicit dependency
	`libgnometypebuiltins.h libgnometypebuiltins.c: $(CORBA_SOURCE)'.

2001-05-01  Martin Baulig  <baulig@suse.de>

	* gnome-preferences.h (GNOME_PAD, GNOME_PAD_SMALL, GNOME_PAD_BIG):
	Moved these #defines here from gnome-uidefs.h.

2001-04-30  Martin Baulig  <baulig@suse.de>

	* gnome-selector.h (gnome_selector_get_entry_text): Removed.
	(gnome_selector_set_entry_text): Removed.
	(gnome_selector_activate_entry): Removed.

2001-04-30  Martin Baulig  <baulig@suse.de>

	* gnome-selector.h (gnome_selector_bind_to_control): New function.

2001-04-30  Martin Baulig  <baulig@suse.de>

	* gnome-selector.h (GnomeSelector): Made this a BonoboObject.
	(GNOME_TYPE_SELECTOR_ASYNC_HANDLE): New #define.
	(gnome_selector_async_handle_get_type): New function.
	(GNOME_TYPE_SELECTION_MODE): New #define.
	(gnome_selection_mode_get_type): New function.

	* gnome-selector.c: Use GObject and removed all GTK+ stuff.
	(PROP_ENTRY_WIDGET, PROP_SELECTOR_WIDGET, PROP_BROWSE_DIALOG):
	Removed these properties.

	* gnome-selector.[ch], gnome-selectorP.h: Moved here from libgnomeui.

	* libgnome.h: #include <libgnome/gnome-selector.h>.

2001-04-30  Martin Baulig  <baulig@suse.de>

	* Makefile.am (libgnome_2_la_SOURCES): Added the CORBA sources.
	(libgnome_headers): Install Gnome.h.

	* libgnome.h: #include <libgnome/Gnome.h>.

2001-04-30  Martin Baulig  <baulig@suse.de>

	* gnome-marshal.list, gnome-marshal-main.c: Moved here
	from libgnomeui.
