@@ -1,3 +1,8 @@
+2001-05-03  Martin Baulig  <baulig@suse.de>
+
+	* gnome-file-selector.[ch]: Moved here from libgnomeui.
+	(GnomeFileSelector): Derive this directly from GnomeSelector.
+
 2001-05-02  Michael Meeks  <michael@ximian.com>
 
 	* libgnome-init.c (libbonobo_class_init): kill BonoboObjectClietn.
